Cards not rendering borders when used inside a column that renders scrollbars fix

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -4,6 +4,7 @@
 /* Scrollbar mobile fix. This forces the scrollbar to dissappear for everything
    smaller than the $tablet mixin. */
 .scrollbar-container {
+  padding: 1px;
   @include until($tablet) {
     position: relative !important;
   }
